results/SVCOMP/conversational/log-ExSymExe13-2024_03_11_03_33_07.txt
class Main {
  static int field;
  static int field2;

  //@ requires arg >= 0;
  //@ ensures \result ==> field2 == 0;
  //@ ensures !\result ==> field2 != 0;
  public static boolean f(int arg) {
    if (arg < 0)
      return true;
    int x = arg;

    Main inst = new Main();
    field = 9;
    return inst.test(x, arg, field2);
  }
  
  //@ requires r == 0;
  //@ ensures \result ==> z < 99;
  //@ ensures !\result ==> z >= 99;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe13");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r < 99) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x < z) {
      System.out.println("branch BOO1");
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe13.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field2 == 0;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe13.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field2 != 0;
                           ^
2 errors

class Main {
  static int field;
  static int field2;

  //@ spec_public
  static int field;
  //@ spec_public
  static int field2;

  //@ requires arg >= 0;
  //@ ensures \result ==> field2 == 0;
  //@ ensures !\result ==> field2 != 0;
  public static boolean f(int arg) {
    if (arg < 0)
      return true;
    int x = arg;

    Main inst = new Main();
    field = 9;
    return inst.test(x, arg, field2);
  }
  
  //@ requires r == 0;
  //@ ensures \result ==> z < 99;
  //@ ensures !\result ==> z >= 99;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe13");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r < 99) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x < z) {
      System.out.println("branch BOO1");
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe13.java:6: error: variable field is already defined in class Main
  static int field;
             ^
/home/max/Documents/JMLGPT/tmp/ExSymExe13.java:8: error: variable field2 is already defined in class Main
  static int field2;
             ^
/home/max/Documents/JMLGPT/tmp/ExSymExe13.java:11: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field2 == 0;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe13.java:12: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field2 != 0;
                           ^
4 errors

class Main {
  static int field;
  static int field2;

  //@ spec_public
  static int field;
  //@ spec_public
  static int field2;

  //@ requires arg >= 0;
  //@ ensures \result ==> field2 == 0;
  //@ ensures !\result ==> field2 != 0;
  public static boolean f(int arg) {
    if (arg < 0)
      return true;
    int x = arg;

    Main inst = new Main();
    field = 9;
    return inst.test(x, arg, field2);
  }
  
  //@ requires r == 0;
  //@ ensures \result ==> z < 99;
  //@ ensures !\result ==> z >= 99;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe13");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r < 99) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x < z) {
      System.out.println("branch BOO1");
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe13.java:6: error: variable field is already defined in class Main
  static int field;
             ^
/home/max/Documents/JMLGPT/tmp/ExSymExe13.java:8: error: variable field2 is already defined in class Main
  static int field2;
             ^
/home/max/Documents/JMLGPT/tmp/ExSymExe13.java:11: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field2 == 0;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe13.java:12: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field2 != 0;
                           ^
4 errors

class Main {
  //@ spec_public
  static int field;
  //@ spec_public
  static int field2;

  //@ requires arg >= 0;
  //@ ensures \result ==> field2 == 0;
  //@ ensures !\result ==> field2 != 0;
  public static boolean f(int arg) {
    if (arg < 0)
      return true;
    int x = arg;

    Main inst = new Main();
    field = 9;
    return inst.test(x, arg, field2);
  }
  
  //@ requires r == 0;
  //@ ensures \result ==> z < 99;
  //@ ensures !\result ==> z >= 99;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe13");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r < 99) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x < z) {
      System.out.println("branch BOO1");
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
